--- a/Yuanyuan/Info.plist
+++ b/Yuanyuan/Info.plist
@@ -39,5 +39,9 @@
 			</array>
 		</dict>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>SourceHanSerifSC-Bold.otf</string>
+	</array>
 </dict>
 </plist>
