--- a/MolyMemo/MolyMemo.entitlements
+++ b/MolyMemo/MolyMemo.entitlements
@@ -5,6 +5,7 @@
 	<key>com.apple.security.application-groups</key>
 	<array>
 		<string>group.com.molymemo.shared</string>
+		<string>group.com.yuanyuan.shared</string>
 	</array>
 </dict>
 </plist>
