--- a/MolyMemo/Info.plist
+++ b/MolyMemo/Info.plist
@@ -2,6 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleDevelopmentRegion</key>
+	<string>zh-Hans</string>
+	<key>CFBundleLocalizations</key>
+	<array>
+		<string>zh-Hans</string>
+		<string>en</string>
+	</array>
 	<key>NSCameraUsageDescription</key>
 	<string>需要使用您的相机以拍照、扫码与识别图片内容</string>
 	<key>NSPhotoLibraryUsageDescription</key>
